reference/5.1/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390787
Help Version: 5.2.0.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 8599ac6b6d6449e72eb76156cbe34de469fcfa1e
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: zh-TW
ms.lasthandoff: 10/07/2020
ms.locfileid: "93206387"
---
# <span data-ttu-id="45283-103">Microsoft.PowerShell.Utility 模組</span><span class="sxs-lookup"><span data-stu-id="45283-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="45283-104">描述</span><span class="sxs-lookup"><span data-stu-id="45283-104">Description</span></span>

<span data-ttu-id="45283-105">本章節包含與 Microsoft PowerShell. 公用程式模組一起安裝之 Cmdlet 的說明主題。</span><span class="sxs-lookup"><span data-stu-id="45283-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="45283-106">此模組包含可管理 PowerShell 基本功能的 Cmdlet。</span><span class="sxs-lookup"><span data-stu-id="45283-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="45283-107">Microsoft PowerShell. 公用程式 Cmdlet</span><span class="sxs-lookup"><span data-stu-id="45283-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="45283-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="45283-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="45283-109">將自訂屬性和方法新增至 PowerShell 物件的實例。</span><span class="sxs-lookup"><span data-stu-id="45283-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="45283-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="45283-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="45283-111">將 Microsoft .NET Framework 類別新增至 PowerShell 會話。</span><span class="sxs-lookup"><span data-stu-id="45283-111">Adds a Microsoft .NET Framework class to a PowerShell session.</span></span>

### [<span data-ttu-id="45283-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="45283-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="45283-113">刪除變數的值。</span><span class="sxs-lookup"><span data-stu-id="45283-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="45283-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="45283-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="45283-115">比較兩個物件集。</span><span class="sxs-lookup"><span data-stu-id="45283-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="45283-116">Convert-String</span><span class="sxs-lookup"><span data-stu-id="45283-116">Convert-String</span></span>](Convert-String.md)
<span data-ttu-id="45283-117">將字串格式化以符合範例。</span><span class="sxs-lookup"><span data-stu-id="45283-117">Formats a string to match examples.</span></span>

### [<span data-ttu-id="45283-118">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="45283-118">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="45283-119">將以逗號分隔值 (CSV) 格式的物件屬性轉換為原始物件的 CSV 版本。</span><span class="sxs-lookup"><span data-stu-id="45283-119">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="45283-120">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="45283-120">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="45283-121">將 JSON 格式的字串轉換成自訂物件。</span><span class="sxs-lookup"><span data-stu-id="45283-121">Converts a JSON-formatted string to a custom object.</span></span>

### [<span data-ttu-id="45283-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="45283-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="45283-123">將 SDDL 字串轉換成自訂物件。</span><span class="sxs-lookup"><span data-stu-id="45283-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="45283-124">ConvertFrom-String</span><span class="sxs-lookup"><span data-stu-id="45283-124">ConvertFrom-String</span></span>](ConvertFrom-String.md)
<span data-ttu-id="45283-125">從字串內容中解壓縮和剖析結構化屬性。</span><span class="sxs-lookup"><span data-stu-id="45283-125">Extracts and parses structured properties from string content.</span></span>

### [<span data-ttu-id="45283-126">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="45283-126">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="45283-127">將包含一或多個索引鍵與值組的字串轉換成雜湊表。</span><span class="sxs-lookup"><span data-stu-id="45283-127">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="45283-128">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="45283-128">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="45283-129">將 .NET 物件轉換成一系列的逗號分隔值， (CSV) 字串。</span><span class="sxs-lookup"><span data-stu-id="45283-129">Converts .NET objects into a series of comma-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="45283-130">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="45283-130">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="45283-131">將 .NET 物件轉換成可在網頁瀏覽器中顯示的 HTML。</span><span class="sxs-lookup"><span data-stu-id="45283-131">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="45283-132">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="45283-132">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="45283-133">將物件轉換成 JSON 格式的字串。</span><span class="sxs-lookup"><span data-stu-id="45283-133">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="45283-134">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="45283-134">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="45283-135">建立物件的 XML 表示法。</span><span class="sxs-lookup"><span data-stu-id="45283-135">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="45283-136">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="45283-136">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="45283-137">啟動具有運行空間的互動式偵錯工具會話。</span><span class="sxs-lookup"><span data-stu-id="45283-137">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="45283-138">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="45283-138">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="45283-139">在目前的主控台中停用中斷點。</span><span class="sxs-lookup"><span data-stu-id="45283-139">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="45283-140">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="45283-140">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="45283-141">停用一或多個執行程式的偵錯工具，並釋放任何暫止的偵錯工具停止。</span><span class="sxs-lookup"><span data-stu-id="45283-141">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="45283-142">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="45283-142">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="45283-143">在目前的主控台中啟用中斷點。</span><span class="sxs-lookup"><span data-stu-id="45283-143">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="45283-144">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="45283-144">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="45283-145">在附加偵錯工具之前保留任何中斷點的空間上啟用偵錯工具。</span><span class="sxs-lookup"><span data-stu-id="45283-145">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="45283-146">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="45283-146">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="45283-147">將目前已定義別名的相關資訊匯出至檔案。</span><span class="sxs-lookup"><span data-stu-id="45283-147">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="45283-148">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="45283-148">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="45283-149">建立一或多個物件的 XML 表示法，並將它儲存在檔案中。</span><span class="sxs-lookup"><span data-stu-id="45283-149">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="45283-150">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="45283-150">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="45283-151">將物件轉換成一系列的逗號分隔值 (CSV) 字串，並將字串儲存至檔案。</span><span class="sxs-lookup"><span data-stu-id="45283-151">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="45283-152">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="45283-152">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="45283-153">在格式化檔案中儲存來自目前工作階段的格式化資料。</span><span class="sxs-lookup"><span data-stu-id="45283-153">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="45283-154">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="45283-154">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="45283-155">從另一個會話匯出命令，並將其儲存在 PowerShell 模組中。</span><span class="sxs-lookup"><span data-stu-id="45283-155">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="45283-156">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="45283-156">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="45283-157">使用自訂檢視來格式化輸出。</span><span class="sxs-lookup"><span data-stu-id="45283-157">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="45283-158">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="45283-158">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="45283-159">以十六進位格式顯示檔案或其他輸入。</span><span class="sxs-lookup"><span data-stu-id="45283-159">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="45283-160">Format-List</span><span class="sxs-lookup"><span data-stu-id="45283-160">Format-List</span></span>](Format-List.md)
<span data-ttu-id="45283-161">將輸出格式化為屬性清單，其中每個屬性會顯示在新的一行上。</span><span class="sxs-lookup"><span data-stu-id="45283-161">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="45283-162">Format-Table</span><span class="sxs-lookup"><span data-stu-id="45283-162">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="45283-163">將輸出格式化為表格。</span><span class="sxs-lookup"><span data-stu-id="45283-163">Formats the output as a table.</span></span>

### [<span data-ttu-id="45283-164">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="45283-164">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="45283-165">將物件以每個物件只顯示一個屬性的寬型表格方式格式化。</span><span class="sxs-lookup"><span data-stu-id="45283-165">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="45283-166">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="45283-166">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="45283-167">取得目前工作階段的別名。</span><span class="sxs-lookup"><span data-stu-id="45283-167">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="45283-168">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="45283-168">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="45283-169">取得作業系統中目前設定的文化特性。</span><span class="sxs-lookup"><span data-stu-id="45283-169">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="45283-170">Get-Date</span><span class="sxs-lookup"><span data-stu-id="45283-170">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="45283-171">取得目前的日期和時間。</span><span class="sxs-lookup"><span data-stu-id="45283-171">Gets the current date and time.</span></span>

### [<span data-ttu-id="45283-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="45283-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="45283-173">取得事件佇列中的事件。</span><span class="sxs-lookup"><span data-stu-id="45283-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="45283-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="45283-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="45283-175">取得目前工作階段中的事件訂閱者。</span><span class="sxs-lookup"><span data-stu-id="45283-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="45283-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="45283-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="45283-177">使用指定的雜湊演算法來計算檔案的雜湊值。</span><span class="sxs-lookup"><span data-stu-id="45283-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="45283-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="45283-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="45283-179">取得目前工作階段中的格式化資料。</span><span class="sxs-lookup"><span data-stu-id="45283-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="45283-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="45283-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="45283-181">取得代表目前主機程式的物件。</span><span class="sxs-lookup"><span data-stu-id="45283-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="45283-182">Get-Member</span><span class="sxs-lookup"><span data-stu-id="45283-182">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="45283-183">取得物件的屬性和方法。</span><span class="sxs-lookup"><span data-stu-id="45283-183">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="45283-184">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="45283-184">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="45283-185">取得目前工作階段中設定的中斷點。</span><span class="sxs-lookup"><span data-stu-id="45283-185">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="45283-186">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="45283-186">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="45283-187">顯示目前的呼叫堆疊。</span><span class="sxs-lookup"><span data-stu-id="45283-187">Displays the current call stack.</span></span>

### [<span data-ttu-id="45283-188">Get-Random</span><span class="sxs-lookup"><span data-stu-id="45283-188">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="45283-189">取得一個隨機數字，或從集合隨機選擇物件。</span><span class="sxs-lookup"><span data-stu-id="45283-189">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="45283-190">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="45283-190">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="45283-191">取得 PowerShell 主機進程內的作用中的空間。</span><span class="sxs-lookup"><span data-stu-id="45283-191">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="45283-192">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="45283-192">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="45283-193">顯示運行時調試選項。</span><span class="sxs-lookup"><span data-stu-id="45283-193">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="45283-194">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="45283-194">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="45283-195">取得已檢測進行追蹤的 PowerShell 元件。</span><span class="sxs-lookup"><span data-stu-id="45283-195">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="45283-196">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="45283-196">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="45283-197">取得目前工作階段中的延伸類型資料。</span><span class="sxs-lookup"><span data-stu-id="45283-197">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="45283-198">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="45283-198">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="45283-199">取得作業系統中目前的 UI 文化特性設定。</span><span class="sxs-lookup"><span data-stu-id="45283-199">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="45283-200">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="45283-200">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="45283-201">從排序的清單中傳回唯一項目。</span><span class="sxs-lookup"><span data-stu-id="45283-201">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="45283-202">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="45283-202">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="45283-203">取得目前主控台中的變數。</span><span class="sxs-lookup"><span data-stu-id="45283-203">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="45283-204">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="45283-204">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="45283-205">取得核准的 PowerShell 動詞。</span><span class="sxs-lookup"><span data-stu-id="45283-205">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="45283-206">Group-Object</span><span class="sxs-lookup"><span data-stu-id="45283-206">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="45283-207">將包含指定屬性之相同值的物件分組。</span><span class="sxs-lookup"><span data-stu-id="45283-207">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="45283-208">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="45283-208">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="45283-209">匯入來自檔案的別名清單。</span><span class="sxs-lookup"><span data-stu-id="45283-209">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="45283-210">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="45283-210">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="45283-211">匯入 CLIXML 檔案，並在 PowerShell 中建立對應的物件。</span><span class="sxs-lookup"><span data-stu-id="45283-211">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="45283-212">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="45283-212">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="45283-213">以逗號分隔值 (CSV) 檔中的專案建立類似表格的自訂物件。</span><span class="sxs-lookup"><span data-stu-id="45283-213">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="45283-214">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="45283-214">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="45283-215">根據為作業系統選取的 UI 文化特性，將語言特定資料匯入指令碼和函式。</span><span class="sxs-lookup"><span data-stu-id="45283-215">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="45283-216">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="45283-216">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="45283-217">從匯入值。.PSD1 檔案，但不叫用其內容</span><span class="sxs-lookup"><span data-stu-id="45283-217">Imports values from a .PSD1 file without invoking its contents</span></span>

### [<span data-ttu-id="45283-218">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="45283-218">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="45283-219">將另一個工作階段的命令匯入目前的工作階段。</span><span class="sxs-lookup"><span data-stu-id="45283-219">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="45283-220">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="45283-220">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="45283-221">在本機電腦上執行命令或運算式。</span><span class="sxs-lookup"><span data-stu-id="45283-221">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="45283-222">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="45283-222">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="45283-223">傳送 HTTP 或 HTTPS 要求至 RESTful Web 服務。</span><span class="sxs-lookup"><span data-stu-id="45283-223">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="45283-224">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="45283-224">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="45283-225">從網際網路上的網頁取得內容。</span><span class="sxs-lookup"><span data-stu-id="45283-225">Gets content from a web page on the Internet.</span></span>

### [<span data-ttu-id="45283-226">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="45283-226">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="45283-227">測量執行指令碼區塊和 Cmdlet 所需的時間。</span><span class="sxs-lookup"><span data-stu-id="45283-227">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="45283-228">Measure-Object</span><span class="sxs-lookup"><span data-stu-id="45283-228">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="45283-229">計算物件的數值屬性，以及字串物件 (例如文字檔案) 中的字元數、文字數和行數。</span><span class="sxs-lookup"><span data-stu-id="45283-229">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="45283-230">New-Alias</span><span class="sxs-lookup"><span data-stu-id="45283-230">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="45283-231">建立新的別名。</span><span class="sxs-lookup"><span data-stu-id="45283-231">Creates a new alias.</span></span>

### [<span data-ttu-id="45283-232">New-Event</span><span class="sxs-lookup"><span data-stu-id="45283-232">New-Event</span></span>](New-Event.md)
<span data-ttu-id="45283-233">建立新的事件。</span><span class="sxs-lookup"><span data-stu-id="45283-233">Creates a new event.</span></span>

### [<span data-ttu-id="45283-234">新增-Guid</span><span class="sxs-lookup"><span data-stu-id="45283-234">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="45283-235">建立 GUID。</span><span class="sxs-lookup"><span data-stu-id="45283-235">Creates a GUID.</span></span>

### [<span data-ttu-id="45283-236">New-Object</span><span class="sxs-lookup"><span data-stu-id="45283-236">New-Object</span></span>](New-Object.md)
<span data-ttu-id="45283-237">建立 Microsoft .NET Framework 或 COM 物件的執行個體。</span><span class="sxs-lookup"><span data-stu-id="45283-237">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="45283-238">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="45283-238">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="45283-239">建立暫存檔。</span><span class="sxs-lookup"><span data-stu-id="45283-239">Creates a temporary file.</span></span>

### [<span data-ttu-id="45283-240">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="45283-240">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="45283-241">建立 TimeSpan 物件。</span><span class="sxs-lookup"><span data-stu-id="45283-241">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="45283-242">New-Variable</span><span class="sxs-lookup"><span data-stu-id="45283-242">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="45283-243">建立新變數。</span><span class="sxs-lookup"><span data-stu-id="45283-243">Creates a new variable.</span></span>

### [<span data-ttu-id="45283-244">Out-File</span><span class="sxs-lookup"><span data-stu-id="45283-244">Out-File</span></span>](Out-File.md)
<span data-ttu-id="45283-245">將輸出傳送到檔案。</span><span class="sxs-lookup"><span data-stu-id="45283-245">Sends output to a file.</span></span>

### [<span data-ttu-id="45283-246">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="45283-246">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="45283-247">將輸出傳送到另一個視窗中的互動式表格。</span><span class="sxs-lookup"><span data-stu-id="45283-247">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="45283-248">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="45283-248">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="45283-249">將輸出傳送到印表機。</span><span class="sxs-lookup"><span data-stu-id="45283-249">Sends output to a printer.</span></span>

### [<span data-ttu-id="45283-250">Out-String</span><span class="sxs-lookup"><span data-stu-id="45283-250">Out-String</span></span>](Out-String.md)
<span data-ttu-id="45283-251">以字串形式輸出輸入物件。</span><span class="sxs-lookup"><span data-stu-id="45283-251">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="45283-252">Read-Host</span><span class="sxs-lookup"><span data-stu-id="45283-252">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="45283-253">從主控台讀取輸入的一行。</span><span class="sxs-lookup"><span data-stu-id="45283-253">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="45283-254">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="45283-254">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="45283-255">訂閱由 PowerShell 引擎和 Cmdlet 所產生的事件 `New-Event` 。</span><span class="sxs-lookup"><span data-stu-id="45283-255">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="45283-256">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="45283-256">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="45283-257">訂閱 Microsoft .NET Framework 物件所產生的事件。</span><span class="sxs-lookup"><span data-stu-id="45283-257">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="45283-258">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="45283-258">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="45283-259">從事件佇列中刪除事件。</span><span class="sxs-lookup"><span data-stu-id="45283-259">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="45283-260">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="45283-260">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="45283-261">從目前的主控台刪除中斷點。</span><span class="sxs-lookup"><span data-stu-id="45283-261">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="45283-262">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="45283-262">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="45283-263">從目前的工作階段刪除延伸類型。</span><span class="sxs-lookup"><span data-stu-id="45283-263">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="45283-264">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="45283-264">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="45283-265">刪除變數和它的值。</span><span class="sxs-lookup"><span data-stu-id="45283-265">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="45283-266">Select-Object</span><span class="sxs-lookup"><span data-stu-id="45283-266">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="45283-267">選取物件或物件屬性。</span><span class="sxs-lookup"><span data-stu-id="45283-267">Selects objects or object properties.</span></span>

### [<span data-ttu-id="45283-268">Select-String</span><span class="sxs-lookup"><span data-stu-id="45283-268">Select-String</span></span>](Select-String.md)
<span data-ttu-id="45283-269">尋找字串和檔案中的文字。</span><span class="sxs-lookup"><span data-stu-id="45283-269">Finds text in strings and files.</span></span>

### [<span data-ttu-id="45283-270">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="45283-270">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="45283-271">尋找 XML 字串或文件中的文字。</span><span class="sxs-lookup"><span data-stu-id="45283-271">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="45283-272">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="45283-272">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="45283-273">傳送電子郵件訊息。</span><span class="sxs-lookup"><span data-stu-id="45283-273">Sends an email message.</span></span>

### [<span data-ttu-id="45283-274">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="45283-274">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="45283-275">在目前的 PowerShell 會話中，建立或變更 Cmdlet 或其他命令的別名。</span><span class="sxs-lookup"><span data-stu-id="45283-275">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="45283-276">Set-Date</span><span class="sxs-lookup"><span data-stu-id="45283-276">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="45283-277">將電腦的系統時間變更為您指定的時間。</span><span class="sxs-lookup"><span data-stu-id="45283-277">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="45283-278">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="45283-278">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="45283-279">在行、命令或變數上設定中斷點。</span><span class="sxs-lookup"><span data-stu-id="45283-279">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="45283-280">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="45283-280">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="45283-281">設定、啟動和停止 PowerShell 元件的追蹤。</span><span class="sxs-lookup"><span data-stu-id="45283-281">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="45283-282">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="45283-282">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="45283-283">設定變數的值。</span><span class="sxs-lookup"><span data-stu-id="45283-283">Sets the value of a variable.</span></span>

### [<span data-ttu-id="45283-284">Show-Command</span><span class="sxs-lookup"><span data-stu-id="45283-284">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="45283-285">在圖形視窗中顯示 PowerShell 命令資訊。</span><span class="sxs-lookup"><span data-stu-id="45283-285">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="45283-286">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="45283-286">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="45283-287">依屬性值排序物件。</span><span class="sxs-lookup"><span data-stu-id="45283-287">Sorts objects by property values.</span></span>

### [<span data-ttu-id="45283-288">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="45283-288">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="45283-289">將指令碼或工作階段中的活動暫停一段指定的時間。</span><span class="sxs-lookup"><span data-stu-id="45283-289">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="45283-290">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="45283-290">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="45283-291">將命令輸出儲存至檔案或變數，同時將它透過管線傳送。</span><span class="sxs-lookup"><span data-stu-id="45283-291">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="45283-292">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="45283-292">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="45283-293">設定並啟動指定運算式或命令的追蹤。</span><span class="sxs-lookup"><span data-stu-id="45283-293">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="45283-294">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="45283-294">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="45283-295">將從網際網路下載的檔案解除封鎖。</span><span class="sxs-lookup"><span data-stu-id="45283-295">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="45283-296">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="45283-296">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="45283-297">取消事件訂閱。</span><span class="sxs-lookup"><span data-stu-id="45283-297">Cancels an event subscription.</span></span>

### [<span data-ttu-id="45283-298">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="45283-298">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="45283-299">更新目前工作階段中的格式化資料。</span><span class="sxs-lookup"><span data-stu-id="45283-299">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="45283-300">Update-List</span><span class="sxs-lookup"><span data-stu-id="45283-300">Update-List</span></span>](Update-List.md)
<span data-ttu-id="45283-301">在包含物件集合的屬性值中新增和移除項目。</span><span class="sxs-lookup"><span data-stu-id="45283-301">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="45283-302">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="45283-302">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="45283-303">更新工作階段中的延伸類型資料。</span><span class="sxs-lookup"><span data-stu-id="45283-303">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="45283-304">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="45283-304">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="45283-305">先停止偵錯工具中的腳本，再執行腳本中的下一個語句。</span><span class="sxs-lookup"><span data-stu-id="45283-305">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="45283-306">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="45283-306">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="45283-307">等候引發特定事件後再繼續執行。</span><span class="sxs-lookup"><span data-stu-id="45283-307">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="45283-308">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="45283-308">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="45283-309">將偵錯訊息寫入主控台。</span><span class="sxs-lookup"><span data-stu-id="45283-309">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="45283-310">Write-Error</span><span class="sxs-lookup"><span data-stu-id="45283-310">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="45283-311">將物件寫入錯誤串流。</span><span class="sxs-lookup"><span data-stu-id="45283-311">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="45283-312">Write-Host</span><span class="sxs-lookup"><span data-stu-id="45283-312">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="45283-313">將自訂輸出寫入主機。</span><span class="sxs-lookup"><span data-stu-id="45283-313">Writes customized output to a host.</span></span>

### [<span data-ttu-id="45283-314">Write-Information</span><span class="sxs-lookup"><span data-stu-id="45283-314">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="45283-315">指定 PowerShell 如何處理命令的資訊串流資料。</span><span class="sxs-lookup"><span data-stu-id="45283-315">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="45283-316">Write-Output</span><span class="sxs-lookup"><span data-stu-id="45283-316">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="45283-317">將指定的物件傳送給管線中的下一個命令。</span><span class="sxs-lookup"><span data-stu-id="45283-317">Sends the specified objects to the next command in the pipeline.</span></span>

### [<span data-ttu-id="45283-318">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="45283-318">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="45283-319">在 PowerShell 命令視窗中顯示進度列。</span><span class="sxs-lookup"><span data-stu-id="45283-319">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="45283-320">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="45283-320">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="45283-321">將文字寫入詳細資訊訊息串流。</span><span class="sxs-lookup"><span data-stu-id="45283-321">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="45283-322">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="45283-322">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="45283-323">寫入警告訊息。</span><span class="sxs-lookup"><span data-stu-id="45283-323">Writes a warning message.</span></span>
