reference/7.0/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113633
Help Version: 7.0.1.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 6afa678e516ca3f3f6af5be87d2bb7eea628fcf5
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: zh-TW
ms.lasthandoff: 10/07/2020
ms.locfileid: "93206488"
---
# <span data-ttu-id="ef88a-103">Microsoft.PowerShell.Utility 模組</span><span class="sxs-lookup"><span data-stu-id="ef88a-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="ef88a-104">描述</span><span class="sxs-lookup"><span data-stu-id="ef88a-104">Description</span></span>

<span data-ttu-id="ef88a-105">本章節包含與 Microsoft PowerShell. 公用程式模組一起安裝之 Cmdlet 的說明主題。</span><span class="sxs-lookup"><span data-stu-id="ef88a-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="ef88a-106">此模組包含可管理 PowerShell 基本功能的 Cmdlet。</span><span class="sxs-lookup"><span data-stu-id="ef88a-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="ef88a-107">Microsoft PowerShell. 公用程式 Cmdlet</span><span class="sxs-lookup"><span data-stu-id="ef88a-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="ef88a-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="ef88a-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="ef88a-109">將自訂屬性和方法新增至 PowerShell 物件的實例。</span><span class="sxs-lookup"><span data-stu-id="ef88a-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="ef88a-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="ef88a-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="ef88a-111">將 Microsoft .NET Core 類別新增至 PowerShell 會話。</span><span class="sxs-lookup"><span data-stu-id="ef88a-111">Adds a Microsoft .NET Core class to a PowerShell session.</span></span>

### [<span data-ttu-id="ef88a-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="ef88a-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="ef88a-113">刪除變數的值。</span><span class="sxs-lookup"><span data-stu-id="ef88a-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="ef88a-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="ef88a-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="ef88a-115">比較兩個物件集。</span><span class="sxs-lookup"><span data-stu-id="ef88a-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="ef88a-116">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="ef88a-116">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="ef88a-117">將以逗號分隔值 (CSV) 格式的物件屬性轉換為原始物件的 CSV 版本。</span><span class="sxs-lookup"><span data-stu-id="ef88a-117">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="ef88a-118">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="ef88a-118">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="ef88a-119">將 JSON 格式的字串轉換成自訂物件或雜湊表。</span><span class="sxs-lookup"><span data-stu-id="ef88a-119">Converts a JSON-formatted string to a custom object or a hash table.</span></span>

### [<span data-ttu-id="ef88a-120">ConvertFrom-Markdown</span><span class="sxs-lookup"><span data-stu-id="ef88a-120">ConvertFrom-Markdown</span></span>](ConvertFrom-Markdown.md)
<span data-ttu-id="ef88a-121">將字串或檔案的內容轉換為 **MarkdownInfo** 物件。</span><span class="sxs-lookup"><span data-stu-id="ef88a-121">Convert the contents of a string or a file to a **MarkdownInfo** object.</span></span>

### [<span data-ttu-id="ef88a-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="ef88a-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="ef88a-123">將 SDDL 字串轉換成自訂物件。</span><span class="sxs-lookup"><span data-stu-id="ef88a-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="ef88a-124">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="ef88a-124">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="ef88a-125">將包含一或多個索引鍵與值組的字串轉換成雜湊表。</span><span class="sxs-lookup"><span data-stu-id="ef88a-125">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="ef88a-126">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="ef88a-126">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="ef88a-127">將 .NET 物件轉換成一系列的字元分隔值， (CSV) 字串。</span><span class="sxs-lookup"><span data-stu-id="ef88a-127">Converts .NET objects into a series of character-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="ef88a-128">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="ef88a-128">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="ef88a-129">將 .NET 物件轉換成可在網頁瀏覽器中顯示的 HTML。</span><span class="sxs-lookup"><span data-stu-id="ef88a-129">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="ef88a-130">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="ef88a-130">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="ef88a-131">將物件轉換成 JSON 格式的字串。</span><span class="sxs-lookup"><span data-stu-id="ef88a-131">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="ef88a-132">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="ef88a-132">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="ef88a-133">建立物件的 XML 表示法。</span><span class="sxs-lookup"><span data-stu-id="ef88a-133">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="ef88a-134">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="ef88a-134">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="ef88a-135">啟動具有運行空間的互動式偵錯工具會話。</span><span class="sxs-lookup"><span data-stu-id="ef88a-135">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="ef88a-136">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="ef88a-136">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="ef88a-137">在目前的主控台中停用中斷點。</span><span class="sxs-lookup"><span data-stu-id="ef88a-137">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="ef88a-138">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="ef88a-138">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="ef88a-139">停用一或多個執行程式的偵錯工具，並釋放任何暫止的偵錯工具停止。</span><span class="sxs-lookup"><span data-stu-id="ef88a-139">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="ef88a-140">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="ef88a-140">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="ef88a-141">在目前的主控台中啟用中斷點。</span><span class="sxs-lookup"><span data-stu-id="ef88a-141">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="ef88a-142">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="ef88a-142">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="ef88a-143">在附加偵錯工具之前保留任何中斷點的空間上啟用偵錯工具。</span><span class="sxs-lookup"><span data-stu-id="ef88a-143">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="ef88a-144">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="ef88a-144">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="ef88a-145">將目前已定義別名的相關資訊匯出至檔案。</span><span class="sxs-lookup"><span data-stu-id="ef88a-145">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="ef88a-146">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="ef88a-146">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="ef88a-147">建立一或多個物件的 XML 表示法，並將它儲存在檔案中。</span><span class="sxs-lookup"><span data-stu-id="ef88a-147">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="ef88a-148">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="ef88a-148">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="ef88a-149">將物件轉換成一系列的逗號分隔值 (CSV) 字串，並將字串儲存至檔案。</span><span class="sxs-lookup"><span data-stu-id="ef88a-149">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="ef88a-150">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="ef88a-150">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="ef88a-151">在格式化檔案中儲存來自目前工作階段的格式化資料。</span><span class="sxs-lookup"><span data-stu-id="ef88a-151">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="ef88a-152">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="ef88a-152">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="ef88a-153">從另一個會話匯出命令，並將其儲存在 PowerShell 模組中。</span><span class="sxs-lookup"><span data-stu-id="ef88a-153">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="ef88a-154">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="ef88a-154">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="ef88a-155">使用自訂檢視來格式化輸出。</span><span class="sxs-lookup"><span data-stu-id="ef88a-155">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="ef88a-156">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="ef88a-156">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="ef88a-157">以十六進位格式顯示檔案或其他輸入。</span><span class="sxs-lookup"><span data-stu-id="ef88a-157">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="ef88a-158">Format-List</span><span class="sxs-lookup"><span data-stu-id="ef88a-158">Format-List</span></span>](Format-List.md)
<span data-ttu-id="ef88a-159">將輸出格式化為屬性清單，其中每個屬性會顯示在新的一行上。</span><span class="sxs-lookup"><span data-stu-id="ef88a-159">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="ef88a-160">Format-Table</span><span class="sxs-lookup"><span data-stu-id="ef88a-160">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="ef88a-161">將輸出格式化為表格。</span><span class="sxs-lookup"><span data-stu-id="ef88a-161">Formats the output as a table.</span></span>

### [<span data-ttu-id="ef88a-162">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="ef88a-162">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="ef88a-163">將物件以每個物件只顯示一個屬性的寬型表格方式格式化。</span><span class="sxs-lookup"><span data-stu-id="ef88a-163">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="ef88a-164">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="ef88a-164">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="ef88a-165">取得目前工作階段的別名。</span><span class="sxs-lookup"><span data-stu-id="ef88a-165">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="ef88a-166">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="ef88a-166">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="ef88a-167">取得作業系統中目前設定的文化特性。</span><span class="sxs-lookup"><span data-stu-id="ef88a-167">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="ef88a-168">Get-Date</span><span class="sxs-lookup"><span data-stu-id="ef88a-168">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="ef88a-169">取得目前的日期和時間。</span><span class="sxs-lookup"><span data-stu-id="ef88a-169">Gets the current date and time.</span></span>

### [<span data-ttu-id="ef88a-170">Get-Error</span><span class="sxs-lookup"><span data-stu-id="ef88a-170">Get-Error</span></span>](Get-Error.md)
<span data-ttu-id="ef88a-171">取得並顯示目前會話中最近的錯誤訊息。</span><span class="sxs-lookup"><span data-stu-id="ef88a-171">Gets and displays the most recent error messages from the current session.</span></span>

### [<span data-ttu-id="ef88a-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="ef88a-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="ef88a-173">取得事件佇列中的事件。</span><span class="sxs-lookup"><span data-stu-id="ef88a-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="ef88a-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="ef88a-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="ef88a-175">取得目前工作階段中的事件訂閱者。</span><span class="sxs-lookup"><span data-stu-id="ef88a-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="ef88a-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="ef88a-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="ef88a-177">使用指定的雜湊演算法來計算檔案的雜湊值。</span><span class="sxs-lookup"><span data-stu-id="ef88a-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="ef88a-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="ef88a-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="ef88a-179">取得目前工作階段中的格式化資料。</span><span class="sxs-lookup"><span data-stu-id="ef88a-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="ef88a-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="ef88a-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="ef88a-181">取得代表目前主機程式的物件。</span><span class="sxs-lookup"><span data-stu-id="ef88a-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="ef88a-182">Get-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="ef88a-182">Get-MarkdownOption</span></span>](Get-MarkdownOption.md)
<span data-ttu-id="ef88a-183">傳回在主控台中用來呈現 Markdown 內容的目前色彩和樣式。</span><span class="sxs-lookup"><span data-stu-id="ef88a-183">Returns the current colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="ef88a-184">Get-Member</span><span class="sxs-lookup"><span data-stu-id="ef88a-184">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="ef88a-185">取得物件的屬性和方法。</span><span class="sxs-lookup"><span data-stu-id="ef88a-185">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="ef88a-186">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="ef88a-186">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="ef88a-187">取得目前工作階段中設定的中斷點。</span><span class="sxs-lookup"><span data-stu-id="ef88a-187">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="ef88a-188">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="ef88a-188">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="ef88a-189">顯示目前的呼叫堆疊。</span><span class="sxs-lookup"><span data-stu-id="ef88a-189">Displays the current call stack.</span></span>

### [<span data-ttu-id="ef88a-190">Get-Random</span><span class="sxs-lookup"><span data-stu-id="ef88a-190">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="ef88a-191">取得一個隨機數字，或從集合隨機選擇物件。</span><span class="sxs-lookup"><span data-stu-id="ef88a-191">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="ef88a-192">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="ef88a-192">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="ef88a-193">取得 PowerShell 主機進程內的作用中的空間。</span><span class="sxs-lookup"><span data-stu-id="ef88a-193">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="ef88a-194">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="ef88a-194">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="ef88a-195">顯示運行時調試選項。</span><span class="sxs-lookup"><span data-stu-id="ef88a-195">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="ef88a-196">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="ef88a-196">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="ef88a-197">取得已檢測進行追蹤的 PowerShell 元件。</span><span class="sxs-lookup"><span data-stu-id="ef88a-197">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="ef88a-198">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="ef88a-198">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="ef88a-199">取得目前工作階段中的延伸類型資料。</span><span class="sxs-lookup"><span data-stu-id="ef88a-199">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="ef88a-200">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="ef88a-200">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="ef88a-201">取得作業系統中目前的 UI 文化特性設定。</span><span class="sxs-lookup"><span data-stu-id="ef88a-201">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="ef88a-202">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="ef88a-202">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="ef88a-203">從排序的清單中傳回唯一項目。</span><span class="sxs-lookup"><span data-stu-id="ef88a-203">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="ef88a-204">Get-Uptime</span><span class="sxs-lookup"><span data-stu-id="ef88a-204">Get-Uptime</span></span>](Get-Uptime.md)
<span data-ttu-id="ef88a-205">取得自上一次開機之後的 **TimeSpan** 。</span><span class="sxs-lookup"><span data-stu-id="ef88a-205">Get the **TimeSpan** since last boot.</span></span>

### [<span data-ttu-id="ef88a-206">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="ef88a-206">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="ef88a-207">取得目前主控台中的變數。</span><span class="sxs-lookup"><span data-stu-id="ef88a-207">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="ef88a-208">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="ef88a-208">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="ef88a-209">取得核准的 PowerShell 動詞。</span><span class="sxs-lookup"><span data-stu-id="ef88a-209">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="ef88a-210">Group-Object</span><span class="sxs-lookup"><span data-stu-id="ef88a-210">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="ef88a-211">將包含指定屬性之相同值的物件分組。</span><span class="sxs-lookup"><span data-stu-id="ef88a-211">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="ef88a-212">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="ef88a-212">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="ef88a-213">匯入來自檔案的別名清單。</span><span class="sxs-lookup"><span data-stu-id="ef88a-213">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="ef88a-214">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="ef88a-214">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="ef88a-215">匯入 CLIXML 檔案，並在 PowerShell 中建立對應的物件。</span><span class="sxs-lookup"><span data-stu-id="ef88a-215">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="ef88a-216">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="ef88a-216">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="ef88a-217">以逗號分隔值 (CSV) 檔中的專案建立類似表格的自訂物件。</span><span class="sxs-lookup"><span data-stu-id="ef88a-217">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="ef88a-218">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="ef88a-218">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="ef88a-219">根據為作業系統選取的 UI 文化特性，將語言特定資料匯入指令碼和函式。</span><span class="sxs-lookup"><span data-stu-id="ef88a-219">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="ef88a-220">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="ef88a-220">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="ef88a-221">匯入檔案中的值 `.PSD1` ，而不叫用其內容。</span><span class="sxs-lookup"><span data-stu-id="ef88a-221">Imports values from a `.PSD1` file without invoking its contents.</span></span>

### [<span data-ttu-id="ef88a-222">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="ef88a-222">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="ef88a-223">將另一個工作階段的命令匯入目前的工作階段。</span><span class="sxs-lookup"><span data-stu-id="ef88a-223">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="ef88a-224">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="ef88a-224">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="ef88a-225">在本機電腦上執行命令或運算式。</span><span class="sxs-lookup"><span data-stu-id="ef88a-225">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="ef88a-226">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="ef88a-226">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="ef88a-227">傳送 HTTP 或 HTTPS 要求至 RESTful Web 服務。</span><span class="sxs-lookup"><span data-stu-id="ef88a-227">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="ef88a-228">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="ef88a-228">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="ef88a-229">從網際網路上的網頁取得內容。</span><span class="sxs-lookup"><span data-stu-id="ef88a-229">Gets content from a web page on the internet.</span></span>

### [<span data-ttu-id="ef88a-230">Join-String</span><span class="sxs-lookup"><span data-stu-id="ef88a-230">Join-String</span></span>](Join-String.md)
<span data-ttu-id="ef88a-231">將管線中的物件合併成單一字串。</span><span class="sxs-lookup"><span data-stu-id="ef88a-231">Combines objects from the pipeline into a single string.</span></span>

### [<span data-ttu-id="ef88a-232">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="ef88a-232">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="ef88a-233">測量執行指令碼區塊和 Cmdlet 所需的時間。</span><span class="sxs-lookup"><span data-stu-id="ef88a-233">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="ef88a-234">Measure-Object</span><span class="sxs-lookup"><span data-stu-id="ef88a-234">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="ef88a-235">計算物件的數值屬性，以及字串物件 (例如文字檔案) 中的字元數、文字數和行數。</span><span class="sxs-lookup"><span data-stu-id="ef88a-235">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="ef88a-236">New-Alias</span><span class="sxs-lookup"><span data-stu-id="ef88a-236">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="ef88a-237">建立新的別名。</span><span class="sxs-lookup"><span data-stu-id="ef88a-237">Creates a new alias.</span></span>

### [<span data-ttu-id="ef88a-238">New-Event</span><span class="sxs-lookup"><span data-stu-id="ef88a-238">New-Event</span></span>](New-Event.md)
<span data-ttu-id="ef88a-239">建立新的事件。</span><span class="sxs-lookup"><span data-stu-id="ef88a-239">Creates a new event.</span></span>

### [<span data-ttu-id="ef88a-240">新增-Guid</span><span class="sxs-lookup"><span data-stu-id="ef88a-240">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="ef88a-241">建立 GUID。</span><span class="sxs-lookup"><span data-stu-id="ef88a-241">Creates a GUID.</span></span>

### [<span data-ttu-id="ef88a-242">New-Object</span><span class="sxs-lookup"><span data-stu-id="ef88a-242">New-Object</span></span>](New-Object.md)
<span data-ttu-id="ef88a-243">建立 Microsoft .NET Framework 或 COM 物件的執行個體。</span><span class="sxs-lookup"><span data-stu-id="ef88a-243">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="ef88a-244">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="ef88a-244">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="ef88a-245">建立暫存檔。</span><span class="sxs-lookup"><span data-stu-id="ef88a-245">Creates a temporary file.</span></span>

### [<span data-ttu-id="ef88a-246">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="ef88a-246">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="ef88a-247">建立 TimeSpan 物件。</span><span class="sxs-lookup"><span data-stu-id="ef88a-247">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="ef88a-248">New-Variable</span><span class="sxs-lookup"><span data-stu-id="ef88a-248">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="ef88a-249">建立新變數。</span><span class="sxs-lookup"><span data-stu-id="ef88a-249">Creates a new variable.</span></span>

### [<span data-ttu-id="ef88a-250">Out-File</span><span class="sxs-lookup"><span data-stu-id="ef88a-250">Out-File</span></span>](Out-File.md)
<span data-ttu-id="ef88a-251">將輸出傳送到檔案。</span><span class="sxs-lookup"><span data-stu-id="ef88a-251">Sends output to a file.</span></span>

### [<span data-ttu-id="ef88a-252">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="ef88a-252">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="ef88a-253">將輸出傳送到另一個視窗中的互動式表格。</span><span class="sxs-lookup"><span data-stu-id="ef88a-253">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="ef88a-254">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="ef88a-254">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="ef88a-255">將輸出傳送到印表機。</span><span class="sxs-lookup"><span data-stu-id="ef88a-255">Sends output to a printer.</span></span>

### [<span data-ttu-id="ef88a-256">Out-String</span><span class="sxs-lookup"><span data-stu-id="ef88a-256">Out-String</span></span>](Out-String.md)
<span data-ttu-id="ef88a-257">以字串形式輸出輸入物件。</span><span class="sxs-lookup"><span data-stu-id="ef88a-257">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="ef88a-258">Read-Host</span><span class="sxs-lookup"><span data-stu-id="ef88a-258">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="ef88a-259">從主控台讀取輸入的一行。</span><span class="sxs-lookup"><span data-stu-id="ef88a-259">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="ef88a-260">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="ef88a-260">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="ef88a-261">訂閱由 PowerShell 引擎和 Cmdlet 所產生的事件 `New-Event` 。</span><span class="sxs-lookup"><span data-stu-id="ef88a-261">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="ef88a-262">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="ef88a-262">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="ef88a-263">訂閱 Microsoft .NET Framework 物件所產生的事件。</span><span class="sxs-lookup"><span data-stu-id="ef88a-263">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="ef88a-264">Remove-Alias</span><span class="sxs-lookup"><span data-stu-id="ef88a-264">Remove-Alias</span></span>](Remove-Alias.md)
<span data-ttu-id="ef88a-265">移除目前會話中的別名。</span><span class="sxs-lookup"><span data-stu-id="ef88a-265">Remove an alias from the current session.</span></span>

### [<span data-ttu-id="ef88a-266">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="ef88a-266">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="ef88a-267">從事件佇列中刪除事件。</span><span class="sxs-lookup"><span data-stu-id="ef88a-267">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="ef88a-268">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="ef88a-268">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="ef88a-269">從目前的主控台刪除中斷點。</span><span class="sxs-lookup"><span data-stu-id="ef88a-269">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="ef88a-270">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="ef88a-270">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="ef88a-271">從目前的工作階段刪除延伸類型。</span><span class="sxs-lookup"><span data-stu-id="ef88a-271">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="ef88a-272">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="ef88a-272">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="ef88a-273">刪除變數和它的值。</span><span class="sxs-lookup"><span data-stu-id="ef88a-273">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="ef88a-274">Select-Object</span><span class="sxs-lookup"><span data-stu-id="ef88a-274">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="ef88a-275">選取物件或物件屬性。</span><span class="sxs-lookup"><span data-stu-id="ef88a-275">Selects objects or object properties.</span></span>

### [<span data-ttu-id="ef88a-276">Select-String</span><span class="sxs-lookup"><span data-stu-id="ef88a-276">Select-String</span></span>](Select-String.md)
<span data-ttu-id="ef88a-277">尋找字串和檔案中的文字。</span><span class="sxs-lookup"><span data-stu-id="ef88a-277">Finds text in strings and files.</span></span>

### [<span data-ttu-id="ef88a-278">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="ef88a-278">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="ef88a-279">尋找 XML 字串或文件中的文字。</span><span class="sxs-lookup"><span data-stu-id="ef88a-279">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="ef88a-280">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="ef88a-280">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="ef88a-281">傳送電子郵件訊息。</span><span class="sxs-lookup"><span data-stu-id="ef88a-281">Sends an email message.</span></span>

### [<span data-ttu-id="ef88a-282">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="ef88a-282">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="ef88a-283">在目前的 PowerShell 會話中，建立或變更 Cmdlet 或其他命令的別名。</span><span class="sxs-lookup"><span data-stu-id="ef88a-283">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="ef88a-284">Set-Date</span><span class="sxs-lookup"><span data-stu-id="ef88a-284">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="ef88a-285">將電腦的系統時間變更為您指定的時間。</span><span class="sxs-lookup"><span data-stu-id="ef88a-285">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="ef88a-286">Set-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="ef88a-286">Set-MarkdownOption</span></span>](Set-MarkdownOption.md)
<span data-ttu-id="ef88a-287">設定在主控台中用來呈現 Markdown 內容的色彩和樣式。</span><span class="sxs-lookup"><span data-stu-id="ef88a-287">Sets the colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="ef88a-288">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="ef88a-288">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="ef88a-289">在行、命令或變數上設定中斷點。</span><span class="sxs-lookup"><span data-stu-id="ef88a-289">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="ef88a-290">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="ef88a-290">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="ef88a-291">設定、啟動和停止 PowerShell 元件的追蹤。</span><span class="sxs-lookup"><span data-stu-id="ef88a-291">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="ef88a-292">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="ef88a-292">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="ef88a-293">設定變數的值。</span><span class="sxs-lookup"><span data-stu-id="ef88a-293">Sets the value of a variable.</span></span> <span data-ttu-id="ef88a-294">如果要求的名稱的變數不存在，便會建立變數。</span><span class="sxs-lookup"><span data-stu-id="ef88a-294">Creates the variable if one with the requested name does not exist.</span></span>

### [<span data-ttu-id="ef88a-295">Show-Command</span><span class="sxs-lookup"><span data-stu-id="ef88a-295">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="ef88a-296">在圖形視窗中顯示 PowerShell 命令資訊。</span><span class="sxs-lookup"><span data-stu-id="ef88a-296">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="ef88a-297">Show-Markdown</span><span class="sxs-lookup"><span data-stu-id="ef88a-297">Show-Markdown</span></span>](Show-Markdown.md)
<span data-ttu-id="ef88a-298">使用 VT100 escape 序列或在瀏覽器中使用 HTML，以易記的方式顯示主控台中的 Markdown 檔案或字串。</span><span class="sxs-lookup"><span data-stu-id="ef88a-298">Shows a Markdown file or string in the console in a friendly way using VT100 escape sequences or in a browser using HTML.</span></span>

### [<span data-ttu-id="ef88a-299">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="ef88a-299">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="ef88a-300">依屬性值排序物件。</span><span class="sxs-lookup"><span data-stu-id="ef88a-300">Sorts objects by property values.</span></span>

### [<span data-ttu-id="ef88a-301">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="ef88a-301">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="ef88a-302">將指令碼或工作階段中的活動暫停一段指定的時間。</span><span class="sxs-lookup"><span data-stu-id="ef88a-302">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="ef88a-303">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="ef88a-303">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="ef88a-304">將命令輸出儲存至檔案或變數，同時將它透過管線傳送。</span><span class="sxs-lookup"><span data-stu-id="ef88a-304">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="ef88a-305">Test-Json</span><span class="sxs-lookup"><span data-stu-id="ef88a-305">Test-Json</span></span>](Test-Json.md)
<span data-ttu-id="ef88a-306">測試字串是否為有效的 JSON 檔</span><span class="sxs-lookup"><span data-stu-id="ef88a-306">Tests whether a string is a valid JSON document</span></span>

### [<span data-ttu-id="ef88a-307">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="ef88a-307">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="ef88a-308">設定並啟動指定運算式或命令的追蹤。</span><span class="sxs-lookup"><span data-stu-id="ef88a-308">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="ef88a-309">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="ef88a-309">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="ef88a-310">將從網際網路下載的檔案解除封鎖。</span><span class="sxs-lookup"><span data-stu-id="ef88a-310">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="ef88a-311">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="ef88a-311">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="ef88a-312">取消事件訂閱。</span><span class="sxs-lookup"><span data-stu-id="ef88a-312">Cancels an event subscription.</span></span>

### [<span data-ttu-id="ef88a-313">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="ef88a-313">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="ef88a-314">更新目前工作階段中的格式化資料。</span><span class="sxs-lookup"><span data-stu-id="ef88a-314">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="ef88a-315">Update-List</span><span class="sxs-lookup"><span data-stu-id="ef88a-315">Update-List</span></span>](Update-List.md)
<span data-ttu-id="ef88a-316">在包含物件集合的屬性值中新增和移除項目。</span><span class="sxs-lookup"><span data-stu-id="ef88a-316">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="ef88a-317">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="ef88a-317">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="ef88a-318">更新工作階段中的延伸類型資料。</span><span class="sxs-lookup"><span data-stu-id="ef88a-318">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="ef88a-319">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="ef88a-319">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="ef88a-320">先停止偵錯工具中的腳本，再執行腳本中的下一個語句。</span><span class="sxs-lookup"><span data-stu-id="ef88a-320">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="ef88a-321">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="ef88a-321">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="ef88a-322">等候引發特定事件後再繼續執行。</span><span class="sxs-lookup"><span data-stu-id="ef88a-322">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="ef88a-323">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="ef88a-323">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="ef88a-324">將偵錯訊息寫入主控台。</span><span class="sxs-lookup"><span data-stu-id="ef88a-324">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="ef88a-325">Write-Error</span><span class="sxs-lookup"><span data-stu-id="ef88a-325">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="ef88a-326">將物件寫入錯誤串流。</span><span class="sxs-lookup"><span data-stu-id="ef88a-326">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="ef88a-327">Write-Host</span><span class="sxs-lookup"><span data-stu-id="ef88a-327">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="ef88a-328">將自訂輸出寫入主機。</span><span class="sxs-lookup"><span data-stu-id="ef88a-328">Writes customized output to a host.</span></span>

### [<span data-ttu-id="ef88a-329">Write-Information</span><span class="sxs-lookup"><span data-stu-id="ef88a-329">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="ef88a-330">指定 PowerShell 如何處理命令的資訊串流資料。</span><span class="sxs-lookup"><span data-stu-id="ef88a-330">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="ef88a-331">Write-Output</span><span class="sxs-lookup"><span data-stu-id="ef88a-331">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="ef88a-332">將指定的物件傳送給管線中的下一個命令。</span><span class="sxs-lookup"><span data-stu-id="ef88a-332">Sends the specified objects to the next command in the pipeline.</span></span> <span data-ttu-id="ef88a-333">如果命令是管線中的最後一個命令，物件就會顯示在主控台中。</span><span class="sxs-lookup"><span data-stu-id="ef88a-333">If the command is the last command in the pipeline, the objects are displayed in the console.</span></span>

### [<span data-ttu-id="ef88a-334">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="ef88a-334">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="ef88a-335">在 PowerShell 命令視窗中顯示進度列。</span><span class="sxs-lookup"><span data-stu-id="ef88a-335">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="ef88a-336">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="ef88a-336">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="ef88a-337">將文字寫入詳細資訊訊息串流。</span><span class="sxs-lookup"><span data-stu-id="ef88a-337">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="ef88a-338">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="ef88a-338">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="ef88a-339">寫入警告訊息。</span><span class="sxs-lookup"><span data-stu-id="ef88a-339">Writes a warning message.</span></span>
